# crosslingual-coreference

./: .gitignore  CITATION.cff  README.md  pyproject.toml  test.json  test.py  test2.py
.github/workflows/: python-package.yml
crosslingual_coreference/: CorefResolver.py  CrossLingualPredictor.py  CrossLingualPredictorSpacy.py  __init__.py  download.py  test.py  utils.py
crosslingual_coreference/examples/: data.py  test_char_indices.py  test_chunking.py  test_individual.py  test_spacy.py
tests/: test_model_configs.py
