[tool.poetry]
name = "crosslingual-coreference"
version = "0.2.3"
description = "A multi-lingual approach to AllenNLP CoReference Resolution, along with a wrapper for spaCy."
authors = ["David Berenstein <david.berenstein@pandoraintelligence.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pandora-intelligence/crosslingual-coreference"
repository = "https://github.com/pandora-intelligence/crosslingual-coreference"
documentation = "https://github.com/pandora-intelligence/crosslingual-coreference"
keywords = ["AllenNLP", "spaCy", "NLP"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development"
]

[tool.poetry.dependencies]
python = ">=3.7.1,<4.0"
allennlp = ">=2.8,<3.0"
allennlp-models = ">=2.8,<3.0"
spacy = ">=3.1.0,<4.0"
click = "<8.1.0"
torch = ">=1.10.0,<1.11.0"
torchaudio = "<0.11"
torchvision = "<0.12.0"


[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
flake8 = "^4.0.1"
black = "^22.3.0"
flake8-bugbear = "^22.3.23"
flake8-docstrings = "^1.6.0"
isort = "^5.10.1"
pep8-naming = "^0.12.1"
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"

[tool.black]
line-length = 119
experimental-string-processing = true

[tool.isort]
profile = "black"
src_paths = ["crosslingual_coreference"]
