[tool.poetry]
name = "crosslingual-coreference"
version = "0.2.6"
description = "A multi-lingual approach to AllenNLP CoReference Resolution, along with a wrapper for spaCy."
authors = ["David Berenstein <david.berenstein@pandoraintelligence.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pandora-intelligence/crosslingual-coreference"
repository = "https://github.com/pandora-intelligence/crosslingual-coreference"
documentation = "https://github.com/pandora-intelligence/crosslingual-coreference"
keywords = ["AllenNLP", "spaCy", "NLP"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development"
]

[tool.poetry.dependencies]
python = "~3.7.1"
allennlp = "~2.8"
allennlp-models = "~2.8"
spacy = "~3.1"
protobuf = "~3.19"
checklist = "^0.0.11"
Pillow = ">9.1"


[tool.poetry.dev-dependencies]
pytest = "~7.0"
flake8 = "~4.0"
black = "~22.3"
flake8-bugbear = "~22.3"
flake8-docstrings = "~1.6"
isort = "^5.10"
pep8-naming = "^~0.12"
pre-commit = "~2.17"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"

[tool.black]
line-length = 119
experimental-string-processing = true

[tool.isort]
profile = "black"
src_paths = ["crosslingual_coreference"]
