[tool.poetry]
name = "crosslingual-coreference"
version = "0.3.1"
description = "A multi-lingual approach to AllenNLP CoReference Resolution, along with a wrapper for spaCy."
authors = ["David Berenstein <david.m.berenstein@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pandora-intelligence/crosslingual-coreference"
repository = "https://github.com/pandora-intelligence/crosslingual-coreference"
documentation = "https://github.com/pandora-intelligence/crosslingual-coreference"
keywords = ["AllenNLP", "spaCy", "NLP"]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development"
]
packages = [{include = "crosslingual_coreference"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
allennlp = "~2.9"
allennlp-models = "~2.9"
spacy = "~3.1"
scipy = "^1.7"
cached-path = "1.1.2"
protobuf = "^3.20"

[tool.poetry.plugins]

[tool.poetry.plugins."spacy_factories"]
"spacy" = "crosslingual_coreference.__init__:make_crosslingual_coreference"

[tool.poetry.dev-dependencies]
pytest = "~7.0"
flake8 = "~4.0"
black = "~22.3"
flake8-bugbear = "~22.3"
flake8-docstrings = "~1.6"
isort = "^5.10"
pre-commit = "~2.17"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = "tests"

[tool.black]
line-length = 119
experimental-string-processing = true

[tool.isort]
profile = "black"
src_paths = ["crosslingual_coreference"]
